# agnette

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: auth_app_curl_examples.md  notes_app_curl_examples.md
examples/: auth_app.py  basic_app.py  notes_app.py  pure_vibe_app.py
src/agnette/: __init__.py  app.py  middleware.py  models.py  prompts.py  requests.py  runner.py
