[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agnette"
version = "0.1.0"
description = "The FIRST LLM-as-a-backend framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "agnos",
  "starlette>=0.40.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agnette"]
