[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agnette"
version = "0.2.0"
description = "The FIRST LLM-as-a-backend framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Louis Tricot", email = "louistricotkarl@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "glyph-agents",
  "starlette>=0.40.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agnette"]
